# mcp_article1

./: .env.example  .gitignore  README.md  Taskfile.yml  project.yaml  pyproject.toml  run-mcp-server.sh  server_config.json
src/: __init__.py  anthropic_integration.py  config.py  dspy_integration.py  langchain_integration.py  litellm_integration.py  main.py  openai_agents_integration.py  openai_integration.py
tests/: test_mcp_server.py
